--- a/packages/checkers/package.json
+++ b/packages/checkers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@farrapa/checkers",
+  "name": "farrapa-checkers",
   "version": "0.0.1",
   "description": "some simple checkers",
   "author": "Donato Lorenzo <donato@afialapis.com>",
@@ -16,9 +16,9 @@
   "homepage": "https://farrapa.afialapis.com/",
 
   "main": "lib/index.js",
-  "cjs": "dist/@farrapa/checkers.cjs.js",
-  "module": "dist/@farrapa/checkers.es.js",
-  "browser": "dist/@farrapa/checkers.umd.js",
+  "cjs": "dist/farrapa-checkers.cjs.js",
+  "module": "dist/farrapa-checkers.es.js",
+  "browser": "dist/farrapa-checkers.umd.js",
   
   "dependencies": {
 
