--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@farrapa/colors",
+  "name": "farrapa-colors",
   "version": "0.0.1",
   "description": "some colorful utils",
   "author": "Donato Lorenzo <donato@afialapis.com>",
@@ -16,9 +16,9 @@
   "homepage": "https://farrapa.afialapis.com/",
 
   "main": "lib/index.js",
-  "cjs": "dist/@farrapa/colors.cjs.js",
-  "module": "dist/@farrapa/colors.es.js",
-  "browser": "dist/@farrapa/colors.umd.js",
+  "cjs": "dist/farrapa-colors.cjs.js",
+  "module": "dist/farrapa-colors.es.js",
+  "browser": "dist/farrapa-colors.umd.js",
   
   "dependencies": {
 
