--- a/packages/iter/package.json
+++ b/packages/iter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@farrapa/iter",
+  "name": "farrapa-iter",
   "version": "0.0.1",
   "description": "some simple utils for iters",
   "author": "Donato Lorenzo <donato@afialapis.com>",
@@ -16,9 +16,9 @@
   "homepage": "https://farrapa.afialapis.com/",
 
   "main": "lib/index.js",
-  "cjs": "dist/@farrapa/iter.cjs.js",
-  "module": "dist/@farrapa/iter.es.js",
-  "browser": "dist/@farrapa/iter.umd.js",
+  "cjs": "dist/farrapa-iter.cjs.js",
+  "module": "dist/farrapa-iter.es.js",
+  "browser": "dist/farrapa-iter.umd.js",
   
   "dependencies": {
 
