--- a/packages/promises/package.json
+++ b/packages/promises/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@farrapa/promises",
+  "name": "farrapa-promises",
   "version": "0.0.1",
   "description": "some simple utils for promises",
   "author": "Donato Lorenzo <donato@afialapis.com>",
@@ -16,9 +16,9 @@
   "homepage": "https://farrapa.afialapis.com/",
 
   "main": "lib/index.js",
-  "cjs": "dist/@farrapa/promises.cjs.js",
-  "module": "dist/@farrapa/promises.es.js",
-  "browser": "dist/@farrapa/promises.umd.js",
+  "cjs": "dist/farrapa-promises.cjs.js",
+  "module": "dist/farrapa-promises.es.js",
+  "browser": "dist/farrapa-promises.umd.js",
   
   "dependencies": {
 
