--- a/packages/strings/package.json
+++ b/packages/strings/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@farrapa/strings",
+  "name": "farrapa-strings",
   "version": "0.0.1",
   "description": "some simple utils for strings",
   "author": "Donato Lorenzo <donato@afialapis.com>",
@@ -16,9 +16,9 @@
   "homepage": "https://farrapa.afialapis.com/",
 
   "main": "lib/index.js",
-  "cjs": "dist/@farrapa/strings.cjs.js",
-  "module": "dist/@farrapa/strings.es.js",
-  "browser": "dist/@farrapa/strings.umd.js",
+  "cjs": "dist/farrapa-strings.cjs.js",
+  "module": "dist/farrapa-strings.es.js",
+  "browser": "dist/farrapa-strings.umd.js",
   
   "dependencies": {
 
