--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "reset": "npm run clean && pnpm i",
     "prepare": "npm run lint && npm run lib && npm run dist",
 
-    "all:publish": "pnpm publish --filter checkers && pnpm publish --filter collections && pnpm publish --filter colors && pnpm publish --filter encoding && pnpm publish --filter iter && pnpm publish --filter memoize && pnpm publish --filter numbers && pnpm publish --filter objects && pnpm publish --filter pretty-console && pnpm publish --filter promises && pnpm publish --filter strings && pnpm publish --filter url"
+    "all:publish": "pnpm publish --filter farrapa-checkers && pnpm publish --filter farrapa-collections && pnpm publish --filter farrapa-colors && pnpm publish --filter farrapa-encoding && pnpm publish --filter farrapa-iter && pnpm publish --filter farrapa-memoize && pnpm publish --filter farrapa-numbers && pnpm publish --filter farrapa-objects && pnpm publish --filter farrapa-pretty-console && pnpm publish --filter farrapa-promises && pnpm publish --filter farrapa-strings && pnpm publish --filter farrapa-url"
   },
   "keywords": [
     "js",
