--- a/packages/promises/package.json
+++ b/packages/promises/package.json
@@ -15,7 +15,10 @@
   },
   "homepage": "https://farrapa.afialapis.com/",
 
-  "main": "lib/index.js",
+  "main": "src/index.js",
+  "publishConfig": {
+    "main": "lib/index.js"
+  },
   "cjs": "dist/farrapa-promises.cjs.js",
   "module": "dist/farrapa-promises.es.js",
   "browser": "dist/farrapa-promises.umd.js",
