--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,10 +1,9 @@
 {
   "name": "farrapa-colors",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "some colorful utils",
   "author": "Donato Lorenzo <donato@afialapis.com>",
   "license": "MIT",
-  
   "repository": {
     "type": "git",
     "url": "https://github.com/afialapis/farrapa.git",
@@ -14,7 +13,6 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
-
   "main": "src/index.js",
   "publishConfig": {
     "main": "lib/index.js"
@@ -22,8 +20,5 @@
   "cjs": "dist/farrapa-colors.cjs.js",
   "module": "dist/farrapa-colors.es.js",
   "browser": "dist/farrapa-colors.umd.js",
-  
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
