--- a/packages/promises/package.json
+++ b/packages/promises/package.json
@@ -1,10 +1,9 @@
 {
   "name": "farrapa-promises",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "some simple utils for promises",
   "author": "Donato Lorenzo <donato@afialapis.com>",
   "license": "MIT",
-  
   "repository": {
     "type": "git",
     "url": "https://github.com/afialapis/farrapa.git",
@@ -14,7 +13,6 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
-
   "main": "src/index.js",
   "publishConfig": {
     "main": "lib/index.js"
@@ -22,8 +20,5 @@
   "cjs": "dist/farrapa-promises.cjs.js",
   "module": "dist/farrapa-promises.es.js",
   "browser": "dist/farrapa-promises.umd.js",
-  
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
