--- a/packages/promises/package.json
+++ b/packages/promises/package.json
@@ -13,10 +13,7 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
-  "main": "src/index.js",
-  "publishConfig": {
-    "main": "lib/index.js"
-  },
+  "main": "lib/index.js",
   "cjs": "dist/farrapa-promises.cjs.js",
   "module": "dist/farrapa-promises.es.js",
   "browser": "dist/farrapa-promises.umd.js",
