--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "farrapa-promises",
+  "name": "farrapa-commons",
   "version": "1.0.4",
-  "description": "some simple utils for promises",
+  "description": "some simple commons",
   "author": "Donato Lorenzo <donato@afialapis.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/afialapis/farrapa.git",
-    "directory": "packages/promises"
+    "directory": "packages/commons"
   },
   "bugs": {
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
   "main": "lib/index.js",
-  "cjs": "dist/farrapa-promises.cjs.js",
-  "module": "dist/farrapa-promises.es.js",
-  "browser": "dist/farrapa-promises.umd.js",
+  "cjs": "dist/farrapa-commons.cjs.js",
+  "module": "dist/farrapa-commons.es.js",
+  "browser": "dist/farrapa-commons.umd.js",
   "dependencies": {}
 }
