--- a/packages/index/package.json
+++ b/packages/index/package.json
@@ -13,10 +13,24 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
-  "main": "lib/index.js",
-  "cjs": "dist/farrapa.cjs.js",
-  "module": "dist/farrapa.es.js",
+
+	"type": "module",
+  "main": "./dist/farrapa.cjs",
+	"exports": {
+		".": [
+			{
+				"import": "./dist/farrapa.mjs",
+				"require": "./dist/farrapa.cjs",
+				"default": "./dist/farrapa.cjs"
+			},
+			"./dist/farrapa.cjs"
+		]
+	},
+  "cjs": "dist/farrapa.cjs",
+  "module": "dist/farrapa.mjs",
   "browser": "dist/farrapa.umd.js",
+
+  
   "dependencies": {
     "farrapa-checkers": "workspace:../checkers",
     "farrapa-collections": "workspace:../collections",
