--- a/packages/numbers/package.json
+++ b/packages/numbers/package.json
@@ -13,9 +13,23 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
-  "main": "lib/index.js",
-  "cjs": "dist/farrapa-numbers.cjs.js",
-  "module": "dist/farrapa-numbers.es.js",
+
+	"type": "module",
+  "main": "./dist/farrapa-numbers.cjs",
+	"exports": {
+		".": [
+			{
+				"import": "./dist/farrapa-numbers.mjs",
+				"require": "./dist/farrapa-numbers.cjs",
+				"default": "./dist/farrapa-numbers.cjs"
+			},
+			"./dist/farrapa-numbers.cjs"
+		]
+	},
+  "cjs": "dist/farrapa-numbers.cjs",
+  "module": "dist/farrapa-numbers.mjs",
   "browser": "dist/farrapa-numbers.umd.js",
+
+  
   "dependencies": {}
 }
