--- a/packages/pretty-console/package.json
+++ b/packages/pretty-console/package.json
@@ -13,10 +13,24 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
-  "main": "lib/index.js",
-  "cjs": "dist/farrapa-pretty-console.cjs.js",
-  "module": "dist/farrapa-pretty-console.es.js",
+
+	"type": "module",
+  "main": "./dist/farrapa-pretty-console.cjs",
+	"exports": {
+		".": [
+			{
+				"import": "./dist/farrapa-pretty-console.mjs",
+				"require": "./dist/farrapa-pretty-console.cjs",
+				"default": "./dist/farrapa-pretty-console.cjs"
+			},
+			"./dist/farrapa-pretty-console.cjs"
+		]
+	},
+  "cjs": "dist/farrapa-pretty-console.cjs",
+  "module": "dist/farrapa-pretty-console.mjs",
   "browser": "dist/farrapa-pretty-console.umd.js",
+
+  
   "dependencies": {
     "farrapa-colors": "workspace:../colors"
   },
