--- a/package.json
+++ b/package.json
@@ -16,37 +16,27 @@
   },
   "homepage": "https://farrapa.afialapis.com/",
   "scripts": {
-    "lint": "eslint packages --ext .js,.mjs",
-    "test": "node test/index.js",
-    "clean-lib": "./scripts/batch/clean-lib.sh",
-    "lib": "npm run clean-lib && ./scripts/batch/lib.sh",
-    "versioning": "python -m scripts/version/versioning",
-    "clean-dist": "./scripts/batch/clean-dist.sh",
-    "dist": "npm run clean-dist && node scripts/rollup/run.js",
+    "lint": "./script.sh lint",
+    "clean-lib": "./script.sh clean-lib",
+    "lib": "npm run clean-lib && ./script.sh lib",
+    "versioning": "./script.sh version",
+    "clean-dist": "./script.sh clean-dist",
+    "dist": "npm run clean-dist && ./script.sh dist",
     "clean": "npm run clean-lib && npm run clean-dist",
     "reset": "npm run clean && pnpm i",
     "prepare": "npm run clean && npm run lint && npm run dist",
-    "all:publish": "./scripts/batch/publish.sh"
+    "all:publish": "./script.sh publish"
   },
   "keywords": [
     "js",
     "util"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.17.0",
-    "@babel/core": "^7.17.2",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/register": "^7.17.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-replace": "^3.1.0",
-    "eslint": "^8.9.0",
-    "rollup": "^2.67.2",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-node-externals": "^4.0.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "xeira": "0.1.0-beta.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/xeira/configs/eslint.cjs"
+    ]
   }
 }
