--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "farrapa",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "description": "diverse utils used by afialapis",
   "author": "Donato Lorenzo <donato@afialapis.com>",
   "contributors": [
@@ -15,6 +15,14 @@
     "url": "https://github.com/afialapis/farrapa/issues"
   },
   "homepage": "https://farrapa.afialapis.com/",
+  "files": [
+    "package.json",
+    "src",
+    "lib",
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "type": "module",
 
   "main": "./lib/index.cjs",
@@ -115,7 +123,7 @@
     "clean": "npm run clean-lib && npm run clean-dist",
     "reset": "npm run clean && rm -fr package-lock.json node_modules && npm i",
     "site": "npx xeira site",
-    "prepare":  "npm run clean && npm run lint && npm run dist && npm run site"
+    "prepare":  "npm run clean && npm run lint && npm run lib && npm run dist && npm run site"
 
   },
   "keywords": [
