--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "farrapa",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "diverse utils used by afialapis",
   "author": "Donato Lorenzo <donato@afialapis.com>",
   "contributors": [
@@ -24,84 +24,82 @@
     "README.md"
   ],
   "type": "module",
-
   "main": "./lib/index.cjs",
   "exports": {
     ".": {
       "import": "./src/index.mjs",
       "require": "./lib/index.cjs",
       "default": "./lib/index.cjs"
-    },  
+    },
     "./colors": {
-      "import": "./src/colors/index.mjs", 
-      "require": "./lib/colors/index.cjs", 
-      "default": "./lib/colors/index.cjs" 
+      "import": "./src/colors/index.mjs",
+      "require": "./lib/colors/index.cjs",
+      "default": "./lib/colors/index.cjs"
     },
     "./numbers": {
-      "import": "./src/numbers/index.mjs", 
-      "require": "./lib/numbers/index.cjs", 
-      "default": "./lib/numbers/index.cjs" 
+      "import": "./src/numbers/index.mjs",
+      "require": "./lib/numbers/index.cjs",
+      "default": "./lib/numbers/index.cjs"
     },
     "./commons": {
-      "import": "./src/commons/index.mjs", 
-      "require": "./lib/commons/index.cjs", 
-      "default": "./lib/commons/index.cjs" 
+      "import": "./src/commons/index.mjs",
+      "require": "./lib/commons/index.cjs",
+      "default": "./lib/commons/index.cjs"
     },
     "./checkers": {
-      "import": "./src/checkers/index.mjs", 
-      "require": "./lib/checkers/index.cjs", 
-      "default": "./lib/checkers/index.cjs" 
+      "import": "./src/checkers/index.mjs",
+      "require": "./lib/checkers/index.cjs",
+      "default": "./lib/checkers/index.cjs"
     },
     "./collections": {
-      "import": "./src/collections/index.mjs", 
-      "require": "./lib/collections/index.cjs", 
-      "default": "./lib/collections/index.cjs" 
+      "import": "./src/collections/index.mjs",
+      "require": "./lib/collections/index.cjs",
+      "default": "./lib/collections/index.cjs"
     },
     "./encoding": {
-      "import": "./src/encoding/index.mjs", 
-      "require": "./lib/encoding/index.cjs", 
-      "default": "./lib/encoding/index.cjs" 
+      "import": "./src/encoding/index.mjs",
+      "require": "./lib/encoding/index.cjs",
+      "default": "./lib/encoding/index.cjs"
     },
     "./iter": {
-      "import": "./src/iter/index.mjs", 
-      "require": "./lib/iter/index.cjs", 
-      "default": "./lib/iter/index.cjs" 
+      "import": "./src/iter/index.mjs",
+      "require": "./lib/iter/index.cjs",
+      "default": "./lib/iter/index.cjs"
     },
     "./memoize": {
-      "import": "./src/memoize/index.mjs", 
-      "require": "./lib/memoize/index.cjs", 
-      "default": "./lib/memoize/index.cjs" 
+      "import": "./src/memoize/index.mjs",
+      "require": "./lib/memoize/index.cjs",
+      "default": "./lib/memoize/index.cjs"
     },
     "./objects": {
-      "import": "./src/objects/index.mjs", 
-      "require": "./lib/objects/index.cjs", 
-      "default": "./lib/objects/index.cjs" 
+      "import": "./src/objects/index.mjs",
+      "require": "./lib/objects/index.cjs",
+      "default": "./lib/objects/index.cjs"
     },
     "./pretty-console": {
-      "import": "./src/pretty-console/index.mjs", 
-      "require": "./lib/pretty-console/index.cjs", 
-      "default": "./lib/pretty-console/index.cjs" 
+      "import": "./src/pretty-console/index.mjs",
+      "require": "./lib/pretty-console/index.cjs",
+      "default": "./lib/pretty-console/index.cjs"
     },
     "./promises": {
-      "import": "./src/promises/index.mjs", 
-      "require": "./lib/promises/index.cjs", 
-      "default": "./lib/promises/index.cjs" 
+      "import": "./src/promises/index.mjs",
+      "require": "./lib/promises/index.cjs",
+      "default": "./lib/promises/index.cjs"
     },
     "./strings": {
-      "import": "./src/strings/index.mjs", 
-      "require": "./lib/strings/index.cjs", 
-      "default": "./lib/strings/index.cjs" 
+      "import": "./src/strings/index.mjs",
+      "require": "./lib/strings/index.cjs",
+      "default": "./lib/strings/index.cjs"
     },
     "./url": {
-      "import": "./src/url/index.mjs", 
-      "require": "./lib/url/index.cjs", 
-      "default": "./lib/url/index.cjs" 
+      "import": "./src/url/index.mjs",
+      "require": "./lib/url/index.cjs",
+      "default": "./lib/url/index.cjs"
     }
   },
   "cjs": "dist/farrapa.cjs",
   "module": "dist/farrapa.mjs",
   "browser": "dist/farrapa.umd.js",
-
   "scripts": {
     "lint": "npx xeira lint --folder=./src",
     "clean-lib": "rm -fr ./lib && mkdir lib",
@@ -111,18 +109,21 @@
     "clean": "npm run clean-lib && npm run clean-dist",
     "reset": "npm run clean && rm -fr package-lock.json node_modules && npm i",
     "site": "npx xeira site",
-    "prepare":  "npm run clean && npm run lint && npm run lib && npm run dist && npm run site"
+    "prepare": "npm run clean && npm run lint && npm run lib && npm run dist && npm run site"
   },
   "keywords": [
     "js",
     "util"
   ],
   "devDependencies": {
-    "xeira": "^0.1.1"
+    "xeira": "^0.2.0"
   },
   "eslintConfig": {
     "extends": [
       "./node_modules/xeira/configs/eslint.cjs"
     ]
+  },
+  "dependencies": {
+    "tinguir": "^0.0.3"
   }
 }
